# Ray-Tracer

./: CMakeLists.txt  Entity.h  README.md  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  main.cpp
shapes/: Entity.h  Entity_list.cpp  Entity_list.h  Sphere.cpp  Sphere.h
utility/: Camera.h  Ray.h  Thread_pool.cpp  Thread_pool.h  Vec3.cpp  Vec3.h  utility.cpp  utility.h
